--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-dbcp2</artifactId>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>2.14.1</version>
+    </dependency>
   </dependencies>
 
   <build>
