--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
   <packaging>war</packaging>
 
   <name>Project_Internet Maven Webapp</name>
-  <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
   <properties>
@@ -43,6 +42,23 @@
       <artifactId>log4j-core</artifactId>
       <version>2.14.1</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>3.0-alpha-1</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jsp-api</artifactId>
+      <version>2.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -57,6 +73,7 @@
           <target>8</target>
         </configuration>
       </plugin>
+
     </plugins>
   </build>
 </project>
