--- a/src/main/resources/pagespath.properties
+++ b/src/main/resources/pagespath.properties
@@ -7,3 +7,28 @@ signup.path = /signup
 logout.path = /logout
 payment.path = /payments
 tariff.path = /tariff
+user.credit.account.path = /user/credit_accounts
+user.debit.account.path = /user/debit_accounts
+user.deposit.account.path = /user/deposit_accounts
+user.card.path = /user/cards
+user.payment.path = /user/payments
+user.create.payment = /user/new_payment
+user.replenish = /user/replenish
+user.credit.request= /user/credit_request
+user.info= /info
+user.close = /user/close
+
+manager.users.list = /manager/users
+manager.credit.account.path = /manager/credit_accounts
+manager.debit.account.path = /manager/debit_accounts
+manager.deposit.account.path = /manager/deposit_accounts
+manager.card.path = /manager/cards
+manager.card.block.path = /manager/cards/block
+manager.block.path = /manager/accounts/block
+manager.unblock.path = /manager/accounts/unblock
+manager.replenish.path = /manager/replenish
+
+manager.confirm.path = /manager/requests/confirm
+manager.reject.path = /manager/requests/reject
+manager.requests.path = /manager/requests
+manager.rate.path = /manager/annual_rate
