--- a/src/main/resources/pagespath.properties
+++ b/src/main/resources/pagespath.properties
@@ -1,8 +1,10 @@
 site.prefix = /site
 home.path = /home
+account.path = /account
 user.prefix = /user
 manager.prefix = /manager
 login.path = /login
+service.path = /service
 signup.path = /signup
 logout.path = /logout
 payment.path = /payments
@@ -13,7 +15,7 @@ user.deposit.account.path = /user/deposit_accounts
 user.card.path = /user/cards
 user.payment.path = /user/payments
 user.create.payment = /user/new_payment
-user.replenish = /user/replenish
+replenish.path = /replenish
 user.credit.request= /user/credit_request
 user.info= /info
 user.close = /user/close
