--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 url = jdbc:mysql://127.0.0.1:3306/internet_provider?\
-  useLegacyDatetimeCode=false&serverTimezone=UTC
+  useLegacyDatetimeCode=false&serverTimezone=UTC&UseSSL=false
 driver = com.mysql.cj.jdbc.Driver
 user = root
 password = root
