--- a/src/main/resources/pagespath.properties
+++ b/src/main/resources/pagespath.properties
@@ -3,11 +3,14 @@ home.path = /home
 account.path = /account
 user.prefix = /user
 manager.prefix = /manager
+manager.users = /manager/users
 login.path = /login
 service.path = /service
 signup.path = /signup
 logout.path = /logout
 payment.path = /payments
+createUser.path = /manager/create_user
+createTariff.path = /manager/create_tariff
 tariff.path = /tariff
 user.credit.account.path = /user/credit_accounts
 user.debit.account.path = /user/debit_accounts
@@ -19,8 +22,9 @@ replenish.path = /replenish
 user.credit.request= /user/credit_request
 user.info= /info
 user.close = /user/close
+plug = plug
 
-manager.users.list = /manager/users
+manager = /manager
 manager.credit.account.path = /manager/credit_accounts
 manager.debit.account.path = /manager/debit_accounts
 manager.deposit.account.path = /manager/deposit_accounts
