--- a/src/main/resources/pagespath.properties
+++ b/src/main/resources/pagespath.properties
@@ -3,38 +3,19 @@ home.path = /home
 account.path = /account
 user.prefix = /user
 manager.prefix = /manager
-manager.users = /manager/users
 login.path = /login
 service.path = /service
-signup.path = /signup
+manager.includedOption.path = /manager/included_option
 logout.path = /logout
-payment.path = /payments
+
+
+replenish.path = /replenish
+user.info= /info
+
+
+manager.createOption.path = /manager/create_option
 createUser.path = /manager/create_user
 createTariff.path = /manager/create_tariff
-tariff.path = /tariff
-user.credit.account.path = /user/credit_accounts
-user.debit.account.path = /user/debit_accounts
-user.deposit.account.path = /user/deposit_accounts
-user.card.path = /user/cards
-user.payment.path = /user/payments
-user.create.payment = /user/new_payment
-replenish.path = /replenish
-user.credit.request= /user/credit_request
-user.info= /info
-user.close = /user/close
-plug = plug
-
-manager = /manager
-manager.credit.account.path = /manager/credit_accounts
-manager.debit.account.path = /manager/debit_accounts
-manager.deposit.account.path = /manager/deposit_accounts
-manager.card.path = /manager/cards
-manager.card.block.path = /manager/cards/block
-manager.block.path = /manager/accounts/block
-manager.unblock.path = /manager/accounts/unblock
-manager.replenish.path = /manager/replenish
-
-manager.confirm.path = /manager/requests/confirm
-manager.reject.path = /manager/requests/reject
-manager.requests.path = /manager/requests
-manager.rate.path = /manager/annual_rate
+manager.users = /manager/users
+create.service.path = /manager/service
+manager.create.tariff = /manager/create_tariff
