PIP-10 Final debug

--- a/src/main/resources/pagespath.properties
+++ b/src/main/resources/pagespath.properties
@@ -7,9 +7,10 @@ login.path = /login
 service.path = /service
 manager.includedOption.path = /manager/included_option
 logout.path = /logout
+users.path = /manager/users
 
 
-replenish.path = /replenish
+replenish.path = /user/replenish
 user.info= /info
 
 
