--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,27 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId> e-iceblue </groupId>
+      <artifactId>spire.pdf</artifactId>
+      <version>3.11.6</version>
+    </dependency>
+
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>com.e-iceblue</id>
+      <name>e-iceblue</name>
+      <url>http://repo.e-iceblue.com/nexus/content/groups/public/</url>
+    </repository>
+  </repositories>
+
 
   <build>
     <finalName>Project_Internet</finalName>
